--- a/tests/webapps/pom.xml
+++ b/tests/webapps/pom.xml
@@ -28,6 +28,20 @@
 
   <modules>
     <module>test-war-hello</module>
+    <!-- various logging API usages -->
+    <module>test-war-commons-logging_1.0.3</module>
+    <module>test-war-commons-logging_1.1</module>
+    <module>test-war-java_util_logging</module>
+    <!-- TODO: j.u.l root reset -->
+    <module>test-war-log4j_1.1.3</module>
+    <module>test-war-log4j_1.2.15</module>
+    <!-- TODO: log4j2 -->
+    <module>test-war-slf4j_1.2</module>
+    <module>test-war-slf4j_1.5.6</module>
+    <module>test-war-slf4j_1.6.1</module>
+    <module>test-war-slf4j_1.7.20</module>
+    <!-- TODO: apache juli -->
+    <module>test-war-logging-mixed</module>
   </modules>
 
   <dependencyManagement>
@@ -49,6 +63,15 @@
         <targetPath>${project.build.directory}/docker</targetPath>
       </resource>
     </resources>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>9.3.12.v20160915</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <artifactId>maven-checkstyle-plugin</artifactId>
