Issue #23 More updates to maven build for end-to-end integration testing
+ Added log4j 2.6.2 test cases as well

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -51,5 +51,17 @@
         <targetPath>${project.build.directory}/docker</targetPath>
       </resource>
     </resources>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>com.google.cloud.tools</groupId>
+          <artifactId>appengine-maven-plugin</artifactId>
+          <version>0.1.2</version>
+          <configuration>
+            <dockerDirectory>${project.build.directory}/docker</dockerDirectory>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
