--- a/tests/webapps/pom.xml
+++ b/tests/webapps/pom.xml
@@ -35,7 +35,7 @@
     <!-- TODO: j.u.l root reset -->
     <module>test-war-log4j_1.1.3</module>
     <module>test-war-log4j_1.2.15</module>
-    <!-- TODO: log4j2 -->
+    <module>test-war-log4j_2.6.2</module>
     <module>test-war-slf4j_1.2</module>
     <module>test-war-slf4j_1.5.6</module>
     <module>test-war-slf4j_1.6.1</module>
@@ -61,6 +61,11 @@
         <directory>src/main/docker</directory>
         <filtering>true</filtering>
         <targetPath>${project.build.directory}/docker</targetPath>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <targetPath>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes</targetPath>
       </resource>
     </resources>
     <pluginManagement>
