--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -27,6 +27,10 @@
   <name>Jetty-Runtime :: Tests Parent</name>
   <packaging>pom</packaging>
 
+  <properties>
+    <gcloud-projectId-file>${project.build.directory}/gcloud-projectid.properties</gcloud-projectId-file>
+  </properties>
+
   <modules>
     <module>gcloud-testing-core</module>
     <module>webapps</module>
@@ -64,4 +68,66 @@
       </plugins>
     </pluginManagement>
   </build>
+  <profiles>
+    <profile>
+      <!-- When the appengine-maven-plugin implements the issue
+           https://github.com/GoogleCloudPlatform/app-maven-plugin/issues/86
+           then this entire profile can be removed in favor of using a
+           simpler maven plugin approach -->
+      <id>get-gcloud-project-id</id>
+      <activation>
+        <property>
+          <name>!app.deploy.project</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.8</version>
+            <executions>
+              <execution>
+                <id>find-app-deploy-project</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <echo file="${gcloud-projectId-file}" append="false">app.deploy.project=</echo>
+                    <exec executable="gcloud" logError="true" append="true" output="${gcloud-projectId-file}">
+                      <arg value="--quiet"/>
+                      <arg value="config"/>
+                      <arg value="list"/>
+                      <arg value="--format=value(core.project)"/>
+                    </exec>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>properties-maven-plugin</artifactId>
+            <version>1.0.0</version>
+            <executions>
+              <execution>
+                <id>read-gcloud-properties</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>read-project-properties</goal>
+                </goals>
+                <configuration>
+                  <files>
+                    <file>${gcloud-projectId-file}</file>
+                  </files>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
