--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,13 @@
             </execution>
           </executions>
         </plugin>
-        
+
+        <plugin>
+          <groupId>com.google.cloud.tools</groupId>
+          <artifactId>appengine-maven-plugin</artifactId>
+          <version>1.0.0</version>
+        </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
