--- a/tests/gcloud-testing-core/pom.xml
+++ b/tests/gcloud-testing-core/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>snakeyaml</artifactId>
       <version>1.17</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.7</version>
+    </dependency>
     <!--
     <dependency>
       <groupId>com.google.cloud</groupId>
